Apply reviewer comments

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 
-\title{\LARGE Zastosowanie modeli kopułowych do modelowania spreadu aktywów}
+\title{\LARGE Zastosowania i efektywność modeli kopułowych w wybranych obszarach zarządzania ryzykiem}
 \author{Piotr Mikler}
 \promotor{dr inż. Jerzy Dzieża}
 \nralbumu{409145}
