--- a/002_LaTeX/dwuwymiarowe_kopuly_probal.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_probal.tex
@@ -1,4 +1,4 @@
-Przyjrzymy się więc jednej stronie powyższego dualizmu i przeanalizujmy kopuły jako struktury zależności.
+Kopuły można interpretować w dualny sposób. Można patrzeć na nie zarówno jak na funkcje łączące ze sobą dowolne rozkłady brzegowe w spójny rozkład łączny lub też jak na dystrybuanty wielowymiarowych rozkładów jednostajnych. Przyjrzymy się jednej stronie powyższego dualizmu i przeanalizujmy kopuły jako struktury zależności.
 
 \begin{df}[Kopuła minimum]
 	Dwuwymiarowa kopuła minimum $C^{-}$ to kopuła zadana wzorem $C^{-}(u, v) = \max(u+v-1, 0).$
@@ -78,7 +78,7 @@ Co więcej, uzupełniając opis kopuł minimum i maksimum - te z kolei odpowiada
 	\label{thm:tau_from_copula}
 \end{prop}
 
-Przypomnijmy, że w rozdziale \ref{sec:miary_współzależności} połączyliśmy wspoł- i przeciwmonotoniczność z miarami zgodności. Istotnie, bezpośrednio ze wzorów \ref{eq:tau_from_copula} i \ref{eq:rho_from_copula} otrzymujemy teraz dla $C^{+}$: $\tau=1$ oraz $\rho=1$, dla $C^{\perp}$: $\tau=0$ i $\rho=0$, natomiast dla $C^{-}$ mamy $\tau=-1$ i $\rho=-1$. Wzory z własności \ref{thm:tau_from_copula} mają jednak głębsze znaczenie: zadają bijekcję (niezależną od rozkładów brzegowych) między miarami zgodności a konkretną kopułą. Z tego powodu, estymacja $\tau$ jest równoważna estymacji parametrów kopuły, co jest wykorzystywane do kalibracji.
+Przypomnijmy, że w rozdziale \ref{sec:miary_współzależności} połączyliśmy wspoł- i przeciwmonotoniczność z miarami zgodności. Istotnie, bezpośrednio ze wzorów \ref{eq:tau_from_copula} i \ref{eq:rho_from_copula} otrzymujemy teraz dla $C^{+}$: $\tau=1$ oraz $\rho=1$, dla $C^{\perp}$: $\tau=0$ i $\rho=0$, natomiast dla $C^{-}$ mamy $\tau=-1$ i $\rho=-1$. Wzory z własności \ref{thm:tau_from_copula} mają jednak głębsze znaczenie: zadają bijekcję (niezależną od rozkładów brzegowych) między miarami zgodności a konkretną kopułą. Z tego powodu, estymacja $\tau$ jest równoważna estymacji parametrów kopuły, co jest wykorzystywane do kalibracji modeli kopułowych.
 
 Podobnie jest ze wspołczynnikami zależności ogonów, wprowadzonymi w rozdziale \ref{sec:miary_współzależności}. Wprost z definicji kopuły wynika, że można je przedstawić używając jedynie kopuły:
 \begin{prop}[Zależność ogonów]
