--- a/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
@@ -91,9 +91,9 @@ Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymi
 		\includegraphics[width=.8\linewidth]{02_StudentCopula_contour}
 		\includegraphics[width=.8\linewidth]{02_StudentCopula_contour_norm}
 	\end{minipage}
-	\caption{\textbf{Kopuła studenta}, $\nu=3, \rho=0.5$: powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:student_copula_density}}
+	\caption{\textbf{Kopuła t-Studenta}, $\nu=3, \rho=0.5$: powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:student_copula_density}}
 \end{figure}
-Kopuła t-Studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego t-Studenta. Oznacza to, że wielowymiarowy rozkład t-Studenta jest równoważny modelowi o rozkładach brzegowych t-Studenta połączonych kopułą t-Studenta. Wraz z rosnącą liczbą stopni swobody kopuła studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak kompletna, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
+Kopuła t-Studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego t-Studenta. Oznacza to, że wielowymiarowy rozkład t-Studenta jest równoważny modelowi o rozkładach brzegowych t-Studenta połączonych kopułą t-Studenta. Wraz z rosnącą liczbą stopni swobody kopuła t-Studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak kompletna, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
 
 Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowych, ponieważ mają swoje naturalne $d$-wymiarowe rozszerzenia. Kopuły uważane są mimo wszystko za skomplikowane modele, i w obliczu szczegółowych regulacji nakładanych na wewnętrzne modele (np. w podejściu AMA do modelowania ryzyka operacyjnego \cite{BaselII}) dużo łatwiej jest uzasadnić i utrzymać w produkcji model bazujący na kilku intuicyjnych parametrach. Z tego powodu, kopuła t-Studenta jest najczęściej wybieraną w praktyce - pozwala bowiem na modelowanie ciężkich ogonów i korelacji, a jednocześnie jest zaledwie dwuparametryczna (\cite{OpRisk}).\\
 
