--- a/002_LaTeX/model_kopulowy_spreadu.tex
+++ b/002_LaTeX/model_kopulowy_spreadu.tex
@@ -1,4 +1,4 @@
-Dla skupienia uwagi rozważymy model bazujący na rozszerzeniu idei z \cite{Herath_Copula_Crack_Spread}. Używać będziemy procesów ARIMA-GARCH do opisu dynamiki rozkładów brzegowych, po czym zastosujemy kopuły do modelowania zależności w reziduach. Należy zaznaczyć, że jest to algorytm o dużej dowolności ,,podmiany" elementów, który daje się łatwo rozszerzać poprzez uwzględnianie innych procesów brzegowych, czy dynamicznej struktury zależności. Przykłady takich rozszerzeń znaleźć można w \cite{Espen_Crack_Spread_Copula}, \cite{Herath_Copula_Crack_Spread}, \cite{Sukcharoen2017} czy  \cite{Bernard_Pricing_Multivariate_Options_with_copulae}.\\
+Dla skupienia uwagi rozważymy model bazujący na rozszerzeniu idei zaprezentowanej w \cite{Herath_Copula_Crack_Spread}. Używać będziemy procesów ARIMA-GARCH do opisu dynamiki rozkładów brzegowych, po czym zastosujemy kopuły do modelowania zależności w reziduach. Należy zaznaczyć, że jest to algorytm o dużej dowolności ,,podmiany" elementów, który daje się łatwo rozszerzać poprzez uwzględnianie innych procesów brzegowych, czy dynamicznej struktury zależności. Przykłady takich rozszerzeń pokazują \cite{Espen_Crack_Spread_Copula}, \cite{Herath_Copula_Crack_Spread}, \cite{Bernard_Pricing_Multivariate_Options_with_copulae} czy \cite{Sukcharoen2017}.\\
 
 \subsubsection{Model ARIMA-GARCH Vine Copula}
 Niech $S_1(t), S_2(t), \dots, S_d(t)$ będą cenami $d$ aktywów. Rozważać będziemy proces ich logarytmicznych stóp zwrotu:
